Adicionando a sessão de serviços

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <meta property="og:image" content="" />
     <meta property="og:type" content="website" />
     <meta property="og:image:type" content="image/png" />
-    <link rel="icon" href="./fav3.ico" type="image/x-icon" />
+    <link rel="icon" href="./fav.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
