--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,12 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anybody:wght@700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>KL - Home Care</title>
   </head>
