--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,10 @@
       href="https://fonts.googleapis.com/css2?family=Anybody:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap"
+      rel="stylesheet"
+    />
 
     <title>KL - Home Care</title>
   </head>
