--- a/public/index.html
+++ b/public/index.html
@@ -6,23 +6,27 @@
     <meta name="theme-color" content="#000000" />
     <meta name="geo.region" content="BR-RS" />
     <meta name="geo.placename" content="Porto Alegre" />
+    <meta property="og:title" content="KL - Home Care" />
     <meta
-      name="keywords"
-      content="enfermeiro(a) porto alegre, enfermeiro(a) hospitalar, enfermeiro(a) domiciliar"
+      property="og:description"
+      content="Equipe multidisciplinar com cuidados domiciliar e hospitalar."
     />
     <meta
       name="description"
       content="Atendimento especializado domiciliar e hospitalar para pacientes com doenças em todos os estágios."
     />
-    <meta property="og:title" content="KL - Home Care" />
     <meta
-      property="og:description"
-      content="Atendimento especializado domiciliar e hospitalar para pacientes com doenças em todos os estágios."
+      name="keywords"
+      content="enfermeiro(a) porto alegre, enfermeiro(a) hospitalar, enfermeiro(a) domiciliar"
     />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:type" content="website" />
+
+    <meta property="og:url" content="https://kl-home-care.vercel.app/" />
+    <meta
+      property="og:image"
+      content="https://lh3.googleusercontent.com/pw/ABLVV84wkeugSBJt_o4NIypq1tiUAj0NH47A0RSu-Dxx2MOFDHSbgALdvYoslYgFzFr4ovjpsOTMMYo3oiHlGTDrZ0BMT5Js4qRntkusx1ccqZj32WhQSrbsQb98pUzgx5NlcWkIkH10JDO3S8DwkSwiTbPm=w900-h473-s-no-gm?authuser=0"
+    />
     <meta property="og:image:type" content="image/png" />
+    <meta property="og:type" content="website" />
     <link rel="icon" href="./fav.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
